--- a/app/views/test_passages/show.html.erb
+++ b/app/views/test_passages/show.html.erb
@@ -12,7 +12,7 @@
 </p>
 
 <div class="progress mb-4">
-  <div class="progress-bar bg-info progress-test-passage" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+  <div class="progress-bar bg-info progress-test-passage" role="progressbar" style="width: 0%" aria-valuenow="<%= @test_passage.percent_success_answer %>" aria-valuemin="0" aria-valuemax="100"></div>
 </div>
 
 <p><b><%= @test_passage.current_question.body %></b></p>
